--- a/papers/retrosynthesis/article.tex
+++ b/papers/retrosynthesis/article.tex
@@ -296,16 +296,97 @@ T1 model was trained for 1000 epochs with training and validation datasets. Warm
     Beam, T = 1.0 (early) & & 35.57 & 54.14 & 59.13 \\
     Beam, T = 1.3 (early) & & 35.93 & 54.59 & 59.51 \\ 
     \midrule
-    Beam, T = 1.0 (last) & &  &  &  \\
-    Beam, T = 1.3 (last) & \\ 
+    Beam, T = 1.0 (last) & & 37.15 & 55.22 &  60.49 \\
+    Beam, T = 1.3 (last) & & 37.67 & 55.97 & 61.01 \\ 
     \midrule
-    Beam, T = 1.0 (last 10 average) & &  &  &  \\
-    Beam, T = 1.3 (last 10 average) & \\ 
+    Beam, T = 1.0 (last 10 average) & & 37.83 & 56.08 &  60.63 \\
+    Beam, T = 1.3 (last 10 average) & & 38.15 & 56.71 & 61.31 \\ 
     \bottomrule
   \end{tabular}
   \label{tbl:t11}
 
 \end{table} 
+
+\newpage
+
+\subsubsection{Model 1 (run-101)}
+  
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width = 16.5cm]{images/t12.pdf}
+  \caption{Learning curves and rate schedule for T1 model. Losses for training and validation datasets on the left, usual learning rate schedule on the right.}
+  \label{fig:t11}
+\end{figure}
+
+\begin{table}[h!]
+\caption{Parameters of T12 run.}
+  \centering
+  \begin{tabular}{p{8.2cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
+    \toprule
+    Parameter & Value & Top-1 & Top-3 & Top-5 \\
+    \midrule
+    Early stopping loss & 0.09926 & & & \\
+    Last training loss & 0.04832 & & & \\
+    Epoch (early stopping) & 162 & & & \\
+    \midrule
+    Greedy search (early stopping, epoch 162) &  &  & &\\
+    Greedy search (last, epoch 990) &  &  & & \\
+    Greedy (last 10 average, epoch, 990 - 999) & &  & & \\
+    \midrule
+    Beam, T = 1.0 (early) & &  &  &  \\
+    Beam, T = 1.3 (early) & &  &  &  \\ 
+    \midrule
+    Beam, T = 1.0 (last) & &  &  &   \\
+    Beam, T = 1.3 (last) & &  &  &  \\ 
+    \midrule
+    Beam, T = 1.0 (last 10 average) & &  &  &   \\
+    Beam, T = 1.3 (last 10 average) & &  &  &  \\ 
+    \bottomrule
+  \end{tabular}
+  \label{tbl:t12}
+
+\end{table} 
+
+\newpage
+
+\subsubsection{Model 1 (run-102)}
+  
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width = 16.5cm]{images/t1-3.pdf}
+  \caption{Learning curves and rate schedule for T1 model. Losses for training and validation datasets on the left, usual learning rate schedule on the right.}
+  \label{fig:t11}
+\end{figure}
+
+\begin{table}[h!]
+\caption{Parameters of T13 run.}
+  \centering
+  \begin{tabular}{p{8.2cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
+    \toprule
+    Parameter & Value & Top-1 & Top-3 & Top-5 \\
+    \midrule
+    Early stopping loss &  & & & \\
+    Last training loss &  & & & \\
+    Epoch (early stopping) & 193 & & & \\
+    \midrule
+    Greedy search (early stopping, epoch 193) &  &  & &\\
+    Greedy search (last, epoch 990) &  &  & & \\
+    Greedy (last 10 average, epoch, 990 - 999) & &  & & \\
+    \midrule
+    Beam, T = 1.0 (early) & &  &  &  \\
+    Beam, T = 1.3 (early) & &  &  &  \\ 
+    \midrule
+    Beam, T = 1.0 (last) & &  &  &   \\
+    Beam, T = 1.3 (last) & &  &  &  \\ 
+    \midrule
+    Beam, T = 1.0 (last 10 average) & &  &  &   \\
+    Beam, T = 1.3 (last 10 average) & &  &  &  \\ 
+    \bottomrule
+  \end{tabular}
+  \label{tbl:t12}
+
+\end{table} 
+
 
 \newpage
  \subsubsection{Model 2 (run-200)}
@@ -327,13 +408,13 @@ T1 model was trained for 1000 epochs with training and validation datasets. Warm
     Last training loss & 0.05108 & & & \\
     \midrule
     Greedy search (last, epoch 1000) & & 38.85 & & \\
-    Greedy (last 10 average, epoch, 991 - 1000) & &  & & \\
+    Greedy (last 10 average, epoch, 991 - 1000) & & 39.25 & & \\
     \midrule
     Beam, T = 1.0 (last) & & 40.57 &60.19  & 66.77 \\
     Beam, T = 1.3 (last) & & 41.17 & 60.65 &  67.28 \\ 
     \midrule
-    Beam, T = 1.0 (last 10 average) & &  &  &  \\
-    Beam, T = 1.3 (last 10 average) & &  &  &  \\ 
+    Beam, T = 1.0 (last 10 average) & & 40.98 & 60.29 & 67.00 \\
+    Beam, T = 1.3 (last 10 average) & &  41.61 & 60.85 & 67.37 \\ 
     \bottomrule
   \end{tabular}
   \label{tbl:t11}
@@ -359,14 +440,47 @@ T1 model was trained for 1000 epochs with training and validation datasets. Warm
     \midrule
     Last training loss & 0.04943 & & & \\
     \midrule
-    Greedy search (last, epoch 996) & &  & & \\
+    Greedy search (last, epoch 996) & & 38.79 & & \\
+    Greedy (last 10 average, epoch, 991 - 1000) & & 39.11 & & \\
+    \midrule
+    Beam, T = 1.0 (last) & & 40.98 & 60.39 & 66.38  \\
+    Beam, T = 1.3 (last) & & 41.58 &  61.21 & 66.94 \\ 
+    \midrule
+    Beam, T = 1.0 (last 10 average) & & 41.14  & 60.59 &  66.41\\
+    Beam, T = 1.3 (last 10 average) & &  41.87 &  61.35 &  67.08\\ 
+    \bottomrule
+  \end{tabular}
+  \label{tbl:t11}
+
+\end{table} 
+
+\newpage
+ \subsubsection{Model 2 (run-202)}
+ 
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width = 16.5cm]{images/t2-3.pdf}
+  \caption{Learning curves and rate schedule for T2 model. Loss for training on the left, usual learning rate schedule on the right.}
+  \label{fig:t21}
+\end{figure}
+
+\begin{table}[h!]
+\caption{Parameters of T23 run.}
+  \centering
+  \begin{tabular}{p{8.2cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
+    \toprule
+    Parameter & Value & Top-1 & Top-3 & Top-5 \\
+    \midrule
+    Last training loss &  & & & \\
+    \midrule
+    Greedy search (last, epoch 984) & & 0.04826 & & \\
     Greedy (last 10 average, epoch, 991 - 1000) & &  & & \\
     \midrule
-    Beam, T = 1.0 (last) & &  &  &  \\
-    Beam, T = 1.3 (last) & &  &  &   \\ 
+    Beam, T = 1.0 (last) & &  &  &   \\
+    Beam, T = 1.3 (last) & &  &   &  \\ 
     \midrule
-    Beam, T = 1.0 (last 10 average) & &  &  &  \\
-    Beam, T = 1.3 (last 10 average) & &  &  &  \\ 
+    Beam, T = 1.0 (last 10 average) & &   &  &  \\
+    Beam, T = 1.3 (last 10 average) & &   &   &  \\ 
     \bottomrule
   \end{tabular}
   \label{tbl:t11}
