--- a/papers/retrosynthesis/article.tex
+++ b/papers/retrosynthesis/article.tex
@@ -200,20 +200,20 @@ For this study, we implemented The Transformer model in Tensorflow library to su
 \begin{table}[b!]
   \caption{Accuracy (\%) of the models on test set when all reactants were correctly predicted.}
   \centering
-  \begin{tabular}{p{2cm}p{1.5cm}p{1.5cm}p{1.5cm}p{8cm}}
+  \begin{tabular}{p{2cm}p{1cm}p{1cm}p{1cm}p{1cm}p{8cm}}
     \toprule
-    Model & top-1 & top-3 & top-5 & Description\\
+    Model & Greedy & Top-1 & Top-3 & Top-5 & Description\\
     \midrule
-    Seq2Seq & 37.4  & 52.4 & 57.0 & Literature result from \cite{Pande} based on Seq2Seq architecture. \\
-    T1     & 38.27 & 58.23 & 64.96 & Transformer Model trained with validation control set (early stopping, 200 epochs). \\
-    T$1_1$ & 40.16 & 58.95 & 65.54 & The same as T1, but without early stopping (1000 epochs). \\ 
-    T2     & 42.30 & 62.29 & 68.95 & Transformer Model trained on both training and validation sets for 1000 epochs.\\
-    T$2_1$ & 40.36 & & & T = 1.3 during the decoding stage of the T2 model. \\
-    T3     &  & & & Transformer Model trained with cyclic learning rate schedule for 6000 epochs.\\
-    T$3_1$ & 42.28  & & & T =  1.3 during the decoding stage of T3 model \\
-    T4     &  42.25  & 61.31 & 68.11 & Transformer Model trained with distillation approach \cite{Hinton} for 1000 epochs.\\ 
-    T$4_1$ & 42.91 & 62.11 & 68.92 & The same as T4 but decoding at T=1.3 \\
-    T$4_1$ & 44.42 & 63.66 & 70.38 & The same as T4 but decoding at T=1.3, rdkit version 2017.09.3\\    \bottomrule
+    Seq2Seq &  & 37.4  & 52.4 & 57.0 & Literature result from \cite{Pande} based on Seq2Seq architecture. \\
+    T1         & &  &  &  & Transformer Model trained with validation control set (early stopping, 200 epochs). \\
+    T$1_1$ & &  &  &  & The same as T1, but without early stopping (1000 epochs). \\ 
+    T2         & 39.3 & 41.1 & 60.5 & 66.6 & Transformer Model trained on both training and validation sets for 1000 epochs.\\
+    T$2_1$ & & 41.8 & 61.3 & 67.2 & T = 1.3 during the decoding stage of the T2 model. \\
+    T3         & &  & & & Transformer Model trained with cyclic learning rate schedule for 6000 epochs.\\
+    T$3_1$ & &   & & & T =  1.3 during the decoding stage of T3 model \\
+    T4         & &  &  &  & Transformer Model trained with distillation approach \cite{Hinton} for 1000 epochs.\\ 
+    T$4_1$ & &  &  &  & The same as T4 but decoding at T=1.3 \\
+     \bottomrule
   \end{tabular}
   \label{tbl:results}
 \end{table}
@@ -267,8 +267,6 @@ The authors thank NVIDIA Corporation for donating Quadro P6000 and Titan Xp grap
 In this section we report all characteristics of repetitive runs of all models built in this study. Average values based on this data are summed in table \ref{tbl:results}. For every run we report learning curves with loss functions and learning rate, then model relevant information are collected in a table including greedy search decoding accuracies, beam search accuracies for Top-1, Top-3, and Top-5.
 
 \subsection{T1 model} 
-T1 model was trained for 1000 epochs with training and validation datasets. Warmup steps for the learning rate is 16\,000, then it decreases.
-
 \subsubsection{Model 1 (run-100)}
   
 \begin{figure}[h!]
@@ -281,17 +279,17 @@ T1 model was trained for 1000 epochs with training and validation datasets. Warm
 \begin{table}[h!]
 \caption{Parameters of T11 run.}
   \centering
-  \begin{tabular}{p{8.2cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
+  \begin{tabular}{p{6.2cm}p{3.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
     \toprule
     Parameter & Value & Top-1 & Top-3 & Top-5 \\
     \midrule
-    Early stopping loss & 0.10864 & & & \\
-    Last training loss & 0.11819 & & & \\
+    Early stopping loss (training / validation) &  0.09345 / 0.10864 & & & \\
+    Last training loss (training / validation) &  0.05867 / 0.11819& & & \\
     Epoch (early stopping) & 208 & & & \\
     \midrule
     Greedy search (early stopping, epoch 208) & & 32.83 & &\\
-    Greedy search (last, epoch 1000) & & 34.75 & & \\
-    Greedy (last 10 average, epoch, 991 - 1000) & & 35.57 & & \\
+    Greedy search (last, epoch 999) & & 34.75 & & \\
+    Greedy (last 10 average, epoch, 990 - 999) & & 35.57 & & \\
     \midrule
     Beam, T = 1.0 (early) & & 35.57 & 54.14 & 59.13 \\
     Beam, T = 1.3 (early) & & 35.93 & 54.59 & 59.51 \\ 
@@ -300,12 +298,20 @@ T1 model was trained for 1000 epochs with training and validation datasets. Warm
     Beam, T = 1.3 (last) & & 37.67 & 55.97 & 61.01 \\ 
     \midrule
     Beam, T = 1.0 (last 10 average) & & 37.83 & 56.08 &  60.63 \\
-    Beam, T = 1.3 (last 10 average) & & 38.15 & 56.71 & 61.31 \\ 
+    \textbf{Beam, T = 1.3 (last 10 average)}  & & \textbf{38.15} & \textbf{56.71} & \textbf{61.31} \\ 
     \bottomrule
   \end{tabular}
   \label{tbl:t11}
 
 \end{table} 
+
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-1-early.h5}
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-1-last.h5}
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-1-avg.h5}
+
 
 \newpage
 
@@ -321,31 +327,37 @@ T1 model was trained for 1000 epochs with training and validation datasets. Warm
 \begin{table}[h!]
 \caption{Parameters of T12 run.}
   \centering
-  \begin{tabular}{p{8.2cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
+  \begin{tabular}{p{6.2cm}p{3.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
     \toprule
     Parameter & Value & Top-1 & Top-3 & Top-5 \\
     \midrule
-    Early stopping loss & 0.09926 & & & \\
-    Last training loss & 0.04832 & & & \\
+    Early stopping loss (training / validation) &  0.08681 / 0.09926 & & & \\
+    Last training loss (training / validation) &  0.04863 / 0.11316  & & & \\
     Epoch (early stopping) & 162 & & & \\
     \midrule
-    Greedy search (early stopping, epoch 162) &  &  & &\\
-    Greedy search (last, epoch 990) &  &  & & \\
-    Greedy (last 10 average, epoch, 990 - 999) & &  & & \\
+    Greedy search (early stopping, epoch 162) &  & 34.63 & &\\
+    Greedy search (last, epoch 990) &  & 38.07  & & \\
+    Greedy (last 10 average, epoch, 990 - 999) & & 38.19 & & \\
     \midrule
-    Beam, T = 1.0 (early) & &  &  &  \\
-    Beam, T = 1.3 (early) & &  &  &  \\ 
+    Beam, T = 1.0 (early) & & 37.45 & 56.71 & 62.43 \\
+    Beam, T = 1.3 (early) & & 38.31 & 57.93 & 63.35 \\ 
     \midrule
-    Beam, T = 1.0 (last) & &  &  &   \\
-    Beam, T = 1.3 (last) & &  &  &  \\ 
+    Beam, T = 1.0 (last) & & 39.83 & 58.63 &  64.45 \\
+    Beam, T = 1.3 (last) & & 40.67 &  59.53 & 64.97 \\ 
     \midrule
-    Beam, T = 1.0 (last 10 average) & &  &  &   \\
-    Beam, T = 1.3 (last 10 average) & &  &  &  \\ 
+    Beam, T = 1.0 (last 10 average) & & 40.22 & 59.05 &  64.91 \\
+    \textbf{Beam, T = 1.3 (last 10 average)} & & \textbf{40.85} &  \textbf{59.85} & \textbf{65.45} \\ 
     \bottomrule
   \end{tabular}
   \label{tbl:t12}
 
 \end{table} 
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-2-early.h5}
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-2-last.h5}
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-2-avg.h5}
 
 \newpage
 
@@ -361,32 +373,37 @@ T1 model was trained for 1000 epochs with training and validation datasets. Warm
 \begin{table}[h!]
 \caption{Parameters of T13 run.}
   \centering
-  \begin{tabular}{p{8.2cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
+  \begin{tabular}{p{6.2cm}p{3.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
     \toprule
     Parameter & Value & Top-1 & Top-3 & Top-5 \\
     \midrule
-    Early stopping loss &  & & & \\
-    Last training loss &  & & & \\
+    Early stopping loss (training / validation) &  0.07795 / 0.09662 & & & \\
+    Last training loss (training / validation) &  0.04654 / 0.11285  & & & \\
     Epoch (early stopping) & 193 & & & \\
     \midrule
-    Greedy search (early stopping, epoch 193) &  &  & &\\
-    Greedy search (last, epoch 990) &  &  & & \\
-    Greedy (last 10 average, epoch, 990 - 999) & &  & & \\
+    Greedy search (early stopping, epoch 193) &  & 35.63 & &\\
+    Greedy search (last, epoch 998) &  & 38.13 & & \\
+    Greedy (last 10 average, epoch, 990 - 999) & & 38.03 & & \\
     \midrule
-    Beam, T = 1.0 (early) & &  &  &  \\
-    Beam, T = 1.3 (early) & &  &  &  \\ 
+    Beam, T = 1.0 (early) & & 38.75 & 58.55 &  64.47 \\
+    Beam, T = 1.3 (early) & & 39.53 & 59.25 & 65.23 \\ 
     \midrule
-    Beam, T = 1.0 (last) & &  &  &   \\
-    Beam, T = 1.3 (last) & &  &  &  \\ 
+    Beam, T = 1.0 (last) & & 40.05 & 59.35 &  64.27 \\
+    Beam, T = 1.3 (last) & & 40.41 & 60.49 &  64.85 \\ 
     \midrule
     Beam, T = 1.0 (last 10 average) & &  &  &   \\
-    Beam, T = 1.3 (last 10 average) & &  &  &  \\ 
+    \textbf{Beam, T = 1.3 (last 10 average)} & &  &  &   \\ 
     \bottomrule
   \end{tabular}
   \label{tbl:t12}
 
 \end{table} 
 
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-3-early.h5}
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-3-last.h5}
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-3-avg.h5}
 
 \newpage
  \subsubsection{Model 2 (run-200)}
@@ -407,19 +424,23 @@ T1 model was trained for 1000 epochs with training and validation datasets. Warm
     \midrule
     Last training loss & 0.05108 & & & \\
     \midrule
-    Greedy search (last, epoch 1000) & & 38.85 & & \\
-    Greedy (last 10 average, epoch, 991 - 1000) & & 39.25 & & \\
+    Greedy search (last, epoch 981) & & 38.85 & & \\
+    Greedy (last 10 average, epoch, 990 - 999) & & 39.25 & & \\
     \midrule
     Beam, T = 1.0 (last) & & 40.57 &60.19  & 66.77 \\
     Beam, T = 1.3 (last) & & 41.17 & 60.65 &  67.28 \\ 
     \midrule
     Beam, T = 1.0 (last 10 average) & & 40.98 & 60.29 & 67.00 \\
-    Beam, T = 1.3 (last 10 average) & &  41.61 & 60.85 & 67.37 \\ 
+    \textbf{Beam, T = 1.3 (last 10 average)} & &  \textbf{41.61} & \textbf{60.85} & \textbf{67.37} \\ 
     \bottomrule
   \end{tabular}
   \label{tbl:t11}
 
 \end{table} 
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-1-last.h5}
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-1-avg.h5}
 
 \newpage
  \subsubsection{Model 2 (run-201)}
@@ -441,18 +462,22 @@ T1 model was trained for 1000 epochs with training and validation datasets. Warm
     Last training loss & 0.04943 & & & \\
     \midrule
     Greedy search (last, epoch 996) & & 38.79 & & \\
-    Greedy (last 10 average, epoch, 991 - 1000) & & 39.11 & & \\
+    Greedy (last 10 average, epoch, 990 - 999) & & 39.11 & & \\
     \midrule
     Beam, T = 1.0 (last) & & 40.98 & 60.39 & 66.38  \\
     Beam, T = 1.3 (last) & & 41.58 &  61.21 & 66.94 \\ 
     \midrule
     Beam, T = 1.0 (last 10 average) & & 41.14  & 60.59 &  66.41\\
-    Beam, T = 1.3 (last 10 average) & &  41.87 &  61.35 &  67.08\\ 
+    \textbf{Beam, T = 1.3 (last 10 average)} & &  \textbf{41.87} &  \textbf{61.35} &  \textbf{67.08}\\ 
     \bottomrule
   \end{tabular}
   \label{tbl:t11}
 
 \end{table} 
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-2-last.h5}
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-2-avg.h5}
 
 \newpage
  \subsubsection{Model 2 (run-202)}
@@ -471,22 +496,25 @@ T1 model was trained for 1000 epochs with training and validation datasets. Warm
     \toprule
     Parameter & Value & Top-1 & Top-3 & Top-5 \\
     \midrule
-    Last training loss &  & & & \\
+    Last training loss & 0.04826 & & & \\
     \midrule
-    Greedy search (last, epoch 984) & & 0.04826 & & \\
-    Greedy (last 10 average, epoch, 991 - 1000) & &  & & \\
+    Greedy search (last, epoch 984) & & 39.79 & & \\
+    Greedy (last 10 average, epoch, 990 -  999) & & 39.69 & & \\
     \midrule
-    Beam, T = 1.0 (last) & &  &  &   \\
-    Beam, T = 1.3 (last) & &  &   &  \\ 
+    Beam, T = 1.0 (last) & & 41.55 & 60.79 & 66.57  \\
+    Beam, T = 1.3 (last) & & 41.85 & 61.63  & 67.32 \\ 
     \midrule
-    Beam, T = 1.0 (last 10 average) & &   &  &  \\
-    Beam, T = 1.3 (last 10 average) & &   &   &  \\ 
+    Beam, T = 1.0 (last 10 average) & & 41.45  & 60.75 &  66.55\\
+    \textbf{Beam, T = 1.3 (last 10 average)} & & \textbf{42.02}  & \textbf{61.73}  & \textbf{67.19} \\ 
     \bottomrule
   \end{tabular}
   \label{tbl:t11}
 
 \end{table} 
 
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-3-last.h5}
+
+\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-3-avg.h5}
  
  \newpage
  \subsubsection{Model 3 (run-3)}
