--- a/papers/retrosynthesis/references.bib
+++ b/papers/retrosynthesis/references.bib
@@ -402,4 +402,48 @@
   eprint  = {https://doi.org/10.1021/acs.jcim.6b00564},
 }
 
+@Article{Baylon,
+  author  = {Baylon, Javier L. and Cilfone, Nicholas A. and Gulcher, Jeffrey R. and Chittenden, Thomas W.},
+  title   = {Enhancing Retrosynthetic Reaction Prediction with Deep Learning Using Multiscale Reaction Classification},
+  journal = {Journal of Chemical Information and Modeling},
+  year    = {2019},
+  volume  = {59},
+  number  = {2},
+  pages   = {673-688},
+  note    = {PMID: 30642173},
+  doi     = {10.1021/acs.jcim.8b00801},
+  eprint  = {https://doi.org/10.1021/acs.jcim.8b00801},
+  url     = { 
+        https://doi.org/10.1021/acs.jcim.8b00801
+    
+},
+}
+
+@Article{Rules,
+  author  = {Law, James and Zsoldos, Zsolt and Simon, Aniko and Reid, Darryl and Liu, Yang and Khew, Sing Yoong and Johnson, A. Peter and Major, Sarah and Wade, Robert A. and Ando, Howard Y.},
+  title   = {Route Designer: A Retrosynthetic Analysis Tool Utilizing Automated Retrosynthetic Rule Generation},
+  journal = {Journal of Chemical Information and Modeling},
+  year    = {2009},
+  volume  = {49},
+  number  = {3},
+  pages   = {593-602},
+  note    = {PMID: 19434897},
+  doi     = {10.1021/ci800228y},
+  eprint  = {https://doi.org/10.1021/ci800228y},
+  url     = { 
+        https://doi.org/10.1021/ci800228y
+    
+},
+}
+
+@Article{BaskinReview,
+  author  = {Igor I. Baskin and Timur I. Madzhidov and Igor S. Antipin and Alexandre A. Varnek},
+  title   = {Artificial intelligence in synthetic chemistry: achievements and prospects},
+  journal = {Russ. Chem. Rev.},
+  year    = {2017},
+  volume  = {86},
+  number  = {11},
+  pages   = {1127 - 1156},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
