--- a/papers/retrosynthesis/article.tex
+++ b/papers/retrosynthesis/article.tex
@@ -251,6 +251,8 @@ Some discussion...
   \label{fig:landscape}
 \end{figure}
 
+Much attention paid in the scientific literature for rule-based approaches []. Since the authors of [] have described the algorithm of automatic rule extraction from mapped reaction database several implementations of the procedure appeared, and then widely accepted by researchers. However, it should be noticed that, first, there is no algorithm to make atom-mapping  [] if it is absent (the typical situation with laboratory notebooks (ELN) for example). Second, all available information on synthesis usually contains only positive reactions, so all binary classification accuracies are inevitable overestimated because of artificial negative sets exploited in studies. Finally, the absence of commonly accepted dataset for testing makes the results of different groups practically disparate and probably biased to those problems the authors tried to solve. The authors of [] selected 40 molecules from DrugBank [] to test their multiscale models, whereas [] used database specially prepared for classification [].  First work on applying reinforcement learning for the whole retrosynthetic path [] showed superior performance compared to the rule-based methods developed before mainly because the approach can deal with several steps of synthesis. But the policy learned during the training again used extracted rules limiting the method. Thus, the development of models for direct estimation of reactants is still of prime importance. Embedding such systems in policy networks within reinforcement learning paradigm can bring forward an entirely data-driven approach to solve challenging organic synthesis problems.
+
 All source code and also models built are available online via github
 \begin{center}
   \url{https://github.com/bigchem/retrosynthesis}
